--- a/leaderboards/restore.html
+++ b/leaderboards/restore.html
@@ -1,13 +1,28 @@
 <html>
     <head></head>
     <body>
-        <form id="restore" method="POST" enctype="multipart/form-data">
-            <input type="file" name="backup" />
-            <input type="submit">
-        </form>
-        <input type="text" name="url" id="url">
+        <p>
+            <h2>v1</h2>
+            <form id="restore" method="POST" enctype="multipart/form-data">
+                <input type="file" name="backup" />
+                <input type="submit">
+            </form>
+            <label for="url">URL:</label>
+            <input type="text" name="url" id="restore_url">
+        </p>
+        <hr>
+        <p>
+            <h2>v2</h2>
+            <form id="force" method="POST">
+                <input type="submit">
+            </form>
+            <label for="url">URL:</label>
+            <input type="text" name="url" id="force_url">
+        </p>
+        
         <script>
-        url.oninput = function() { restore.action = url.value; }
+        restore_url.oninput = function() { restore.action = restore_url.value; }
+        force_url.oninput = function() { force.action = force_url.value; }
         </script>
     </body>
 </html>
